{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 174,
  "lineage": "48d61c7e-eb8c-bb61-afaf-222d92b4bade",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0483718740305a43b",
            "arn": "arn:aws:ec2:us-east-2:911287867452:elastic-ip/eipalloc-0483718740305a43b",
            "domain": "vpc",
            "id": "eipalloc-0483718740305a43b",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-16-58-92-150.us-east-2.compute.amazonaws.com",
            "public_ip": "16.58.92.150",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "AWS-IAC-NAT-EIP"
            },
            "tags_all": {
              "Name": "AWS-IAC-NAT-EIP"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-040855b0715ee6f0b",
            "arn": "arn:aws:ec2:us-east-2:911287867452:instance/i-06631c0251247fcaf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2-Profile-AWS-IAC",
            "id": "i-06631c0251247fcaf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWS-IAC-key-20260326062349949400000001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-018c2b1f4ff6f5de2"
              }
            ],
            "primary_network_interface_id": "eni-018c2b1f4ff6f5de2",
            "private_dns": "ip-10-0-2-12.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.12",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0748ba7cdc09330fd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6fa07fa75b37971",
            "tags": {
              "Name": "Private-EC2-Instance",
              "Project": "AWS-IAC"
            },
            "tags_all": {
              "Name": "Private-EC2-Instance",
              "Project": "AWS-IAC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d5925b98172e6dd"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911287867452",
            "id": "i-06631c0251247fcaf",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_key_pair.generated",
            "aws_s3_bucket.logs",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "random_id.rand",
            "tls_private_key.generated"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-040855b0715ee6f0b",
            "arn": "arn:aws:ec2:us-east-2:911287867452:instance/i-0ee02f3218473889a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2-Profile-AWS-IAC",
            "id": "i-0ee02f3218473889a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWS-IAC-key-20260326062349949400000001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c5b0b738ae410239"
              }
            ],
            "primary_network_interface_id": "eni-0c5b0b738ae410239",
            "private_dns": "ip-10-0-1-173.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.173",
            "public_ip": "18.221.96.100",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bfbf7d0ad6e5d40c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff338590dba5cd22",
            "tags": {
              "Name": "Public-EC2-Instance",
              "Project": "AWS-IAC"
            },
            "tags_all": {
              "Name": "Public-EC2-Instance",
              "Project": "AWS-IAC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d5925b98172e6dd"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911287867452",
            "id": "i-0ee02f3218473889a",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_key_pair.generated",
            "aws_s3_bucket.logs",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "random_id.rand",
            "tls_private_key.generated"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911287867452:internet-gateway/igw-07b7d77a30f9f2937",
            "id": "igw-07b7d77a30f9f2937",
            "owner_id": "911287867452",
            "region": "us-east-2",
            "tags": {
              "Name": "AWS-IAC-IGW"
            },
            "tags_all": {
              "Name": "AWS-IAC-IGW"
            },
            "vpc_id": "vpc-0390071a4349277b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:911287867452:loadbalancer/app/alb-AWS-IAC/1498c3138fe7f510",
            "arn_suffix": "app/alb-AWS-IAC/1498c3138fe7f510",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-AWS-IAC-310660652.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:911287867452:loadbalancer/app/alb-AWS-IAC/1498c3138fe7f510",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-AWS-IAC",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-002fca6d478ff77d0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-004a2d4c24dc7c095"
              },
              {
                "subnet_id": "subnet-0ff338590dba5cd22"
              }
            ],
            "subnets": [
              "subnet-004a2d4c24dc7c095",
              "subnet-0ff338590dba5cd22"
            ],
            "tags": {
              "Name": "ALB",
              "Project": "AWS-IAC"
            },
            "tags_all": {
              "Name": "ALB",
              "Project": "AWS-IAC"
            },
            "vpc_id": "vpc-0390071a4349277b8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:911287867452:loadbalancer/app/alb-AWS-IAC/1498c3138fe7f510"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "private_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:911287867452:loadbalancer/app/private-alb-AWS-IAC/a02efc5811616bd1",
            "arn_suffix": "app/private-alb-AWS-IAC/a02efc5811616bd1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-private-alb-AWS-IAC-1692884873.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:911287867452:loadbalancer/app/private-alb-AWS-IAC/a02efc5811616bd1",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "private-alb-AWS-IAC",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-002fca6d478ff77d0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02cda5447c1210ce0"
              },
              {
                "subnet_id": "subnet-0a6fa07fa75b37971"
              }
            ],
            "subnets": [
              "subnet-02cda5447c1210ce0",
              "subnet-0a6fa07fa75b37971"
            ],
            "tags": {
              "Name": "Private-ALB",
              "Project": "AWS-IAC"
            },
            "tags_all": {
              "Name": "Private-ALB",
              "Project": "AWS-IAC"
            },
            "vpc_id": "vpc-0390071a4349277b8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:911287867452:loadbalancer/app/private-alb-AWS-IAC/a02efc5811616bd1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:911287867452:listener/app/alb-AWS-IAC/1498c3138fe7f510/72cf9e70088bf684",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:911287867452:targetgroup/app-tg-AWS-IAC/25fb7bdf20059091",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:911287867452:listener/app/alb-AWS-IAC/1498c3138fe7f510/72cf9e70088bf684",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:911287867452:loadbalancer/app/alb-AWS-IAC/1498c3138fe7f510",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:911287867452:listener/app/alb-AWS-IAC/1498c3138fe7f510/72cf9e70088bf684"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:911287867452:targetgroup/app-tg-AWS-IAC/25fb7bdf20059091",
            "arn_suffix": "targetgroup/app-tg-AWS-IAC/25fb7bdf20059091",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:911287867452:targetgroup/app-tg-AWS-IAC/25fb7bdf20059091",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-tg-AWS-IAC",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "App-Target-Group",
              "Project": "AWS-IAC"
            },
            "tags_all": {
              "Name": "App-Target-Group",
              "Project": "AWS-IAC"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0390071a4349277b8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:911287867452:targetgroup/app-tg-AWS-IAC/25fb7bdf20059091"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:911287867452:targetgroup/app-tg-AWS-IAC/25fb7bdf20059091-2026032606243319110000000a",
            "port": 8080,
            "region": "us-east-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:911287867452:targetgroup/app-tg-AWS-IAC/25fb7bdf20059091",
            "target_id": "i-0ee02f3218473889a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_instance.public_ec2",
            "aws_key_pair.generated",
            "aws_lb_target_group.app_tg",
            "aws_s3_bucket.logs",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "random_id.rand",
            "tls_private_key.generated"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0483718740305a43b",
            "association_id": "eipassoc-07790132ad29ea44e",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0fa2bc9ab0453cc98",
            "network_interface_id": "eni-0fe47db8011c27c03",
            "private_ip": "10.0.1.251",
            "public_ip": "16.58.92.150",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ff338590dba5cd22",
            "tags": {
              "Name": "AWS-IAC-NAT-Gateway"
            },
            "tags_all": {
              "Name": "AWS-IAC-NAT-Gateway"
            },
            "vpc_id": "vpc-0390071a4349277b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911287867452:route-table/rtb-0b7b98b24f5114a2d",
            "id": "rtb-0b7b98b24f5114a2d",
            "owner_id": "911287867452",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fa2bc9ab0453cc98",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-Route-Table"
            },
            "tags_all": {
              "Name": "Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0390071a4349277b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911287867452",
            "id": "rtb-0b7b98b24f5114a2d",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911287867452:route-table/rtb-0a350efecd4d2c89c",
            "id": "rtb-0a350efecd4d2c89c",
            "owner_id": "911287867452",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b7d77a30f9f2937",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "tags_all": {
              "Name": "Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0390071a4349277b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911287867452",
            "id": "rtb-0a350efecd4d2c89c",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094f9dd44be2351f3",
            "region": "us-east-2",
            "route_table_id": "rtb-0b7b98b24f5114a2d",
            "subnet_id": "subnet-0a6fa07fa75b37971"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0065df9a475bbd67c",
            "region": "us-east-2",
            "route_table_id": "rtb-0b7b98b24f5114a2d",
            "subnet_id": "subnet-02cda5447c1210ce0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9cad940a58880bd",
            "region": "us-east-2",
            "route_table_id": "rtb-0a350efecd4d2c89c",
            "subnet_id": "subnet-0ff338590dba5cd22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6d6358e80b3a420",
            "region": "us-east-2",
            "route_table_id": "rtb-0a350efecd4d2c89c",
            "subnet_id": "subnet-004a2d4c24dc7c095"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911287867452:security-group/sg-002fca6d478ff77d0",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002fca6d478ff77d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg-AWS-IAC",
            "name_prefix": "",
            "owner_id": "911287867452",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-SG",
              "Project": "AWS-IAC"
            },
            "tags_all": {
              "Name": "ALB-SG",
              "Project": "AWS-IAC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0390071a4349277b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911287867452",
            "id": "sg-002fca6d478ff77d0",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911287867452:security-group/sg-07d5925b98172e6dd",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d5925b98172e6dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-002fca6d478ff77d0"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-002fca6d478ff77d0"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-sg-AWS-IAC",
            "name_prefix": "",
            "owner_id": "911287867452",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2-SG",
              "Project": "AWS-IAC"
            },
            "tags_all": {
              "Name": "EC2-SG",
              "Project": "AWS-IAC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0390071a4349277b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911287867452",
            "id": "sg-07d5925b98172e6dd",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911287867452:subnet/subnet-0a6fa07fa75b37971",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6fa07fa75b37971",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "911287867452",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "AWS-IAC-Private-Subnet-0",
              "Project": "AWS-IAC"
            },
            "tags_all": {
              "Name": "AWS-IAC-Private-Subnet-0",
              "Project": "AWS-IAC"
            },
            "vpc_id": "vpc-0390071a4349277b8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911287867452",
            "id": "subnet-0a6fa07fa75b37971",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911287867452:subnet/subnet-02cda5447c1210ce0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cda5447c1210ce0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "911287867452",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "AWS-IAC-Private-Subnet-1",
              "Project": "AWS-IAC"
            },
            "tags_all": {
              "Name": "AWS-IAC-Private-Subnet-1",
              "Project": "AWS-IAC"
            },
            "vpc_id": "vpc-0390071a4349277b8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911287867452",
            "id": "subnet-02cda5447c1210ce0",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911287867452:subnet/subnet-0ff338590dba5cd22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff338590dba5cd22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "911287867452",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "AWS-IAC-Public-Subnet-0",
              "Project": "AWS-IAC"
            },
            "tags_all": {
              "Name": "AWS-IAC-Public-Subnet-0",
              "Project": "AWS-IAC"
            },
            "vpc_id": "vpc-0390071a4349277b8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911287867452",
            "id": "subnet-0ff338590dba5cd22",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911287867452:subnet/subnet-004a2d4c24dc7c095",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004a2d4c24dc7c095",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "911287867452",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "AWS-IAC-Public-Subnet-1",
              "Project": "AWS-IAC"
            },
            "tags_all": {
              "Name": "AWS-IAC-Public-Subnet-1",
              "Project": "AWS-IAC"
            },
            "vpc_id": "vpc-0390071a4349277b8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911287867452",
            "id": "subnet-004a2d4c24dc7c095",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911287867452:vpc/vpc-0390071a4349277b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad67a6a25c2fb5f9",
            "default_route_table_id": "rtb-0c2a22fe95603d360",
            "default_security_group_id": "sg-08facbaa812fa9e29",
            "dhcp_options_id": "dopt-0c01a069c4e84ae3c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0390071a4349277b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c2a22fe95603d360",
            "owner_id": "911287867452",
            "region": "us-east-2",
            "tags": {
              "Name": "AWS-IAC-VPC"
            },
            "tags_all": {
              "Name": "AWS-IAC-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911287867452",
            "id": "vpc-0390071a4349277b8",
            "region": "us-east-2"
          }
        }
      ]
    }
  ]
}